# music-recommendation-mlops

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  metrics.json  params.yaml  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements-ui.txt  requirements.txt
.dvc/: config
.github/workflows/: cd.yml  ci.yml  pipeline.yml
configs/: data_config.yaml  model_config.yaml  monitoring_config.yaml
data/raw/: .gitignore  february.dvc  january.dvc  march.dvc
k8s/api/: deployment.yaml  service.yaml
k8s/app/: api.yaml  configmap.yaml  ingress.yaml  mlflow.yaml  monitoring.yaml  namespace.yaml  postgres.yaml  secrets.yaml  ui.yaml
k8s/argocd/: application.yaml
k8s/jobs/: training-job.yaml
k8s/mlflow/: deployment.yaml  service.yaml
monitoring/grafana/dashboards/: mlops_dashboard.json
monitoring/prometheus/: prometheus.yml
scripts/: test_predict.py
services/api/: Dockerfile  database.py  dependencies.py  main.py  models_db.py
services/api/routers/: health.py  monitoring_router.py  (+2 more)
services/mlflow/: Dockerfile  requirements.txt
services/ui/: Dockerfile  auth.py  main.py  users.yaml
src/data/: build_features.py  make_dataset.py
src/models/: evaluate_model.py  metrics.py  predict_model.py  train_model.py
src/monitoring/: daily_evaluator.py  drift_detector.py  feature_engineering.py  metrics_collector.py  report_generator.py  scheduler.py
src/utils/: helpers.py
tests/: conftest.py
tests/integration/: test_api.py
tests/unit/: test_data.py  test_metrics.py  test_model.py
